CHANGED: Framework: add border-spacing: 0 to styles for old themes so that jQueryUI dialogs and widgets are displayed correctly.

--- a/framework/html/themes/default/styles.css
+++ b/framework/html/themes/default/styles.css
@@ -6,6 +6,9 @@ BODY
     COLOR: #000000;
     FONT-SIZE: 9pt;
 }
+TABLE {
+    border-spacing: 0;
+}
 A
 {
     FONT-FAMILY: verdana, arial, helvetica, sans-serif;
